--- a/Server/views/Partials/main_nav.ejs
+++ b/Server/views/Partials/main_nav.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">INFR3120</a>
+      <a class="navbar-brand" href="/"><i class="fa-solid fa-list"></i> Tharun's Assignment Tracker</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -14,40 +14,13 @@
             <% } %>
             <i class="fa-solid fa-house"></i> Home</a>
           </li>
-
-          <li class="nav-item">
-            <% if(title=="About Us") {%>
-              <a class="nav-link active" href=" /aboutus">
-            <% } else {%>
-              <a class="nav-link" href="/aboutus">
-            <% } %>
-            <i class="fa-solid fa-circle-info"></i> About Us</a>
-          </li>
-          <li class="nav-item">
-            <% if(title=="products") {%>
-              <a class="nav-link active" href=" /products">
-            <% } else {%>
-              <a class="nav-link" href="/products">
-            <% } %>
-            <i class="fa-solid fa-address-card"></i> Products</a>
-          </li>
-
-          <li class="nav-item">
-            <% if(title=="service") {%>
-              <a class="nav-link active" href=" /service">
-            <% } else {%>
-              <a class="nav-link" href="/service">
-            <% } %>
-            <i class="fa-solid fa-gears"></i> Service</a>
-          </li>
-
           <li class="nav-item">
             <% if(title=="Books") {%>
               <a class="nav-link active" href=" /bookslist">
             <% } else {%>
               <a class="nav-link" href="/bookslist">
             <% } %>
-            <i class="fa-solid fa-book"></i> Books</a>
+            <i class="fa-solid fa-book"></i> Tracker</a>
           </li>
 
           <li class="nav-item">
