--- a/Server/views/Auth/login.ejs
+++ b/Server/views/Auth/login.ejs
@@ -26,7 +26,7 @@
                 <fieldset class="form-group">
 
                     <label for="password"></label>
-                    <input type="text" class="form-control" name="password" placeholder="Enter the password" id="password" required>
+                    <input type="password" class="form-control" name="password" placeholder="Enter the password" id="password" required>
                     or
                     <a href="/register">Register Here</a>
 
