--- a/Server/views/Book/add.ejs
+++ b/Server/views/Book/add.ejs
@@ -7,24 +7,28 @@
             <h1><%= title %></h1>
             <form class="form" method="POST">
                 <div class="form-group">
-                    <label for="nameTextField">Book Title</label>
-                    <input type="text" class="form-control" id="nameTextField" placeholder="Enter the Book Title" name="Name" required>
+                    <label for="nameTextField">Assignments:</label>
+                    <input type="text" class="form-control" id="nameTextField" placeholder="Enter the Assignment name." name="Name" required>
                 </div>
                 <div class="form-group">
-                    <label for="authorTextField">Book Author</label>
-                    <input type="text" class="form-control" id="authorTextField" placeholder="Enter the Book Author" name="Author" required>
+                    <label for="nameTextField">Assignments:</label>
+                    <input type="text" class="form-control" id="nameTextField" placeholder="Enter the Assignment name." name="Name" required>
                 </div>
                 <div class="form-group">
-                    <label for="publishedTextField">Published</label>
-                    <input type="text" class="form-control" id="publishedTextField" placeholder="Enter the Published year" name="Published" required>
+                    <label for="authorTextField">Marks:</label>
+                    <input type="text" class="form-control" id="authorTextField" placeholder="Enter the how many marks the assignment is out of." name="Author" required>
                 </div>
                 <div class="form-group">
-                    <label for="descriptionTextArea">Book Description</label>
-                    <textarea type="text" class="form-control" id="descriptionTextArea"  placeholder="enter the Book Description" name="Description" required></textarea>
+                    <label for="publishedTextField">Weight: </label>
+                    <input type="text" class="form-control" id="publishedTextField" placeholder="Enter the weight of the Assignment. Use ' % '." name="Published" required>
                 </div>
                 <div class="form-group">
-                    <label for="priceTextField">Price</label>
-                    <input type="text" class="form-control" id="priceTextField" placeholder="Book's Price" name="Price" required>
+                    <label for="descriptionTextArea">Assignment Descriptions:</label>
+                    <textarea type="text" class="form-control" id="descriptionTextArea"  placeholder="Enter the type of Assignment and for which class." name="Description" required></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="priceTextField">Due Dates:</label>
+                    <input type="text" class="form-control" id="priceTextField" placeholder="Enter the due date 'yyyy/mm/dd'. " name="Price" required>
                 </div>
                 <button class="btn btn-primary" type="submit">Submit
                 <i class="fas fa-edit"></i></button>  
