--- a/Server/views/Book/list.ejs
+++ b/Server/views/Book/list.ejs
@@ -15,19 +15,19 @@
             <table class="table table-bordered table-striped table-hover">
             <tr class="d-flex">
                 <%if (typeof displayName=='string' && displayName) { %>
-                    <th class="text-center col-2">Name</th>
-                    <th class="text-center col-2">Author</th>
-                    <th class="text-center col-1">Published</th>
-                    <th class="col-4">Description</th>
-                    <th class="text-center col-1">Price</th>
-                    <th class="text-center col-1"></th>
-                    <th class="text-center col-1"></th>
+                    <th class="text-center col-2">Assignments</th>
+                    <th class="text-center col-2">Marks</th>
+                    <th class="text-center col-1">Weight</th>
+                    <th class="col-4">Assignment Description</th>
+                    <th class="text-center col-1">Due Date</th>
+                    <th class="text-center col-1">Edit</th>
+                    <th class="text-center col-1">Delete</th>
                 <% } else { %>
-                    <th class="text-center col-2">Name</th>
-                    <th class="text-center col-2">Author</th>
-                    <th class="text-center col-1">Published</th>
-                    <th class="col-4">Description</th>
-                    <th class="text-center col-1">Price</th>
+                    <th class="text-center col-2">Assignments</th>
+                    <th class="text-center col-2">Marks</th>
+                    <th class="text-center col-1">Weight</th>
+                    <th class="col-4">Assignment Description</th>
+                    <th class="text-center col-1">Due Date</th>
                 <% } %>
                 </tr>
 <% for(let count=0;count<BookList.length;count++) { %>
