--- a/Server/views/home.ejs
+++ b/Server/views/home.ejs
@@ -12,7 +12,10 @@
      <p></p>
     <p class="lead" style="text-align: center;">
       <a class="btn btn-primary btn-lg" href="/bookslist" role="button"><i class="fa-solid fa-table"></i> Assignment Tracker</a> 
-    </p>    
+    </p>
+        <p class="lead" style="text-align: center;">
+      <a class="btn btn-primary btn-lg" href="/login" role="button"><i class="fa-solid fa-right-to-bracket"></i> Login</a> 
+    </p>     
     </h2>
 </div>  
 <%- include Partials/footer.ejs%>
